Ugh, Fixed a stupid CORS issue with the fonts.css, complied/built code breaks on the production site.

--- a/node/template/acuity/src/css/fonts.css
+++ b/node/template/acuity/src/css/fonts.css
@@ -1,30 +1,25 @@
-﻿/* Segoe UI */
-@font-face
+﻿@font-face
 {
 	font-family: az_Light;
-	src: local('Segoe UI Light'), url('SegoeUI-Light.ttf') format('truetype');
+	src: url('./SegoeUI-Light.ttf') format('truetype');
 }
-
 @font-face
 {
 	font-family: az_SemiLight;
-	src: local('Segoe UI SemiLight'), url('SegoeUI-Semilight.ttf');
+	src: url('./SegoeUI-Semilight.ttf')  format('truetype');
 }
-
 @font-face
 {
 	font-family: az_Regular;
-	src: local('Segoe UI'), url('SegoeUI-Regular.ttf');
+	src: url('./SegoeUI-Regular.ttf')  format('truetype');
 }
-
 @font-face
 {
 	font-family: az_SemiBold;
-	src: local('Segoe UI SemiBold'), url('SegoeUI-Semibold.ttf');
+	src: url('./SegoeUI-Semibold.ttf')  format('truetype');
 }
-
 @font-face
 {
 	font-family: az_Bold;
-	src: local('Segoe UI Bold'), url('SegoeUI-Bold.ttf');
+	src: url('./SegoeUI-Bold.ttf')  format('truetype');
 }
